--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,11 +13,24 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+     <servlet>
+	    <servlet-name>statCont</servlet-name>
+	    <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
+    	<load-on-startup>1</load-on-startup>
+  	</servlet>
     <servlet-mapping>
         <servlet-name>chitra</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-  <welcome-file-list>
-  	<welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+    <servlet-mapping>
+	    <servlet-name>statCont</servlet-name>
+	    <url-pattern>*.css</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>statCont</servlet-name>
+	    <url-pattern>*.js</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
